--- a/create_recipe.html
+++ b/create_recipe.html
@@ -61,6 +61,15 @@
         </div>
     </div>
 </div>
-<button type="button" class="btn btn-primary btn-lg">Add Recipe</button>
+<div class="container" > 
+    <div class="row"> 
+        
+        <div class="col">
+            <button type="button" class="btn btn-primary btn-lg">Add Recipe</button>
+        </div>
+        <div class="col"> </div>
+      </div>
+</div>
+
 
 <script src="js/create_recipe.js"></script>
