--- a/my_recipes.html
+++ b/my_recipes.html
@@ -1,5 +1,5 @@
 <script src="js/nav.js"></script>
-<body onload="updateNavBar()"></body>
+<body onload="loadPage()"></body>
 <script src="js/create_recipe.js"></script>
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -16,40 +16,37 @@
           <a class="nav-link" id="create_nav" href="create_recipe.html">Create Recipe</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="recipes_nav" href="my_recipes.html">My Recipes</a>
+          <a class="nav-link active" id="recipes_nav" href="my_recipes.html">My Recipes</a>
         </li>
       </ul>
     </div>
   </nav>
 
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs" id="recipes">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Recipe 1</a>
+          <a class="nav-link active" id= "recipe1" onclick=changeTab(this.id)>Recipe 1</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Recipe 2</a>
+          <a class="nav-link" id="recipe2" onclick=changeTab(this.id)>Recipe 2</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Recipe 3</a>
+          <a class="nav-link" id="recipe3" onclick=changeTab(this.id)>Recipe 3</a>
         </li>
 </ul>
-
-<div class="container">
-        <div class="row">
-          <div class="col">Column</div>
-          <div class="col">Column</div>
-          <div class="w-100"></div>
-          <div class="col">Column</div>
-          <div class="col">Column</div>
-        </div>
-</div>   
-<h4>
+    <h2 id="recipe_name">
+      Recipe Name
+    </h2>
+    <h4>
         Ingredients
     </h4>
-    <ul class="list-group">
-            <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-    </ul>
+    <ol class="list-group" id="ingredients">
+           
+    </ol>
+
+    <h4>
+      Instructions
+  </h4>
+  <ol class="list-group" id="instructions">
+         
+  </ol>
+    <script src="js/my_recipes.js"></script>
