--- a/create_recipe.html
+++ b/create_recipe.html
@@ -1,3 +1,5 @@
+<!-- Jack Girerd jpg3re -->
+
 <script src="js/nav.js"></script>
 <body onload="updateNavBar()"></body>
 <script src="js/create_recipe.js"></script>
@@ -21,7 +23,8 @@
       </ul>
     </div>
   </nav>
-  <h1>Create a New Recipe</h1>
+  <h1 align="center">Create a New Recipe</h1>
+  <br>
   <div class="container">
     <div class="row">
       <div class="col">
