--- a/my_recipes.html
+++ b/my_recipes.html
@@ -19,7 +19,7 @@
           <a class="nav-link" id="home_nav" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="create_nav" href="create_recipe.html">Create Recipe</a>
+          <a class="nav-link" id="create_nav" href="create_recipe.php">Create Recipe</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" id="recipes_nav" href="my_recipes.html">My Recipes</a>
