changed file names

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a class="nav-link" id="create_nav" href="create_recipe.php">Create Recipe</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="recipes_nav" href="my_recipes.html">My Recipes</a>
+          <a class="nav-link" id="recipes_nav" href="my_recipes.php">My Recipes</a>
         </li>
       </ul>
     </div>
