--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 <body>
   <h1 align="center">Welcome To Recipe Generator&trade;</h1>
   <br>
+  <h2>Please Enter your username</h2>
+  <form action="php/add_username_cookie.php" method='post'>
+      <input class="form-control" id="user" name="user" placeholder="Username">
+      <input class="btn btn-outline-secondary" type="submit" name="submit" />
+  </form>
   <h3 align="center">View Sample Recipes:</h3>
   <div class="container">
     <div class="row">
